--- a/misc-utils/cal.1
+++ b/misc-utils/cal.1
@@ -43,7 +43,7 @@
 .Sh SYNOPSIS
 .Nm cal
 .Op Fl mjy13
-.Op Ar month Op Ar year
+.Op [ Ar month ] Ar year
 .Sh DESCRIPTION
 .Nm Cal
 displays a simple calendar.
