--- a/mount/nfs.5
+++ b/mount/nfs.5
@@ -143,6 +143,10 @@ NFS daemon on the remote host.  This option is useful
 for hosts that can run multiple NFS servers.
 The default value is version 2.
 .TP 1.5i
+.I nolock
+Disable NFS locking. This has to be used with some old NFS servers
+that don't support locking.
+.TP 1.5i
 .I bg
 If the first NFS mount attempt times out, retry the mount
 in the background.
