--- a/sys-utils/dmesg.8
+++ b/sys-utils/dmesg.8
@@ -20,16 +20,19 @@ file to whoever can debug their problem.
 .SH OPTIONS
 .TP
 .B \-c
-clear the ring buffer contents after printing.
+Clear the ring buffer contents after printing.
 .TP
 .BI \-s bufsize
-use a buffer of bufsize to query the kernel ring buffer.  This is
-8196 by default (this matches the default kernel syslog buffer size in
-2.0.33 and 2.1.103).  If you have set the kernel buffer to larger than
-the default then this option can be used to view the entire buffer.
+Use a buffer of size
+.I bufsize
+to query the kernel ring buffer.  This is 16392 by default.
+(The default kernel syslog buffer size was 4096
+at first, 8192 since 1.3.54, 16384 since 2.1.113.)
+If you have set the kernel buffer to be larger than the default
+then this option can be used to view the entire buffer.
 .TP
 .BI \-n level
-set the
+Set the
 .I level
 at which logging of messages is done to the console.  For example,
 .B \-n 1
