--- a/mount/nfs.5
+++ b/mount/nfs.5
@@ -201,7 +201,7 @@ Do not use locking. Do not start lockd.
 .TP 1.5i
 .I tcp
 Mount the NFS filesystem using the TCP protocol instead of the
-default UDP protocol.  Many NFS severs only support UDP.
+default UDP protocol.  Many NFS servers only support UDP.
 .TP 1.5i
 .I udp
 Mount the NFS filesystem using the UDP protocol.  This
