--- a/sys-utils/ipcrm.8
+++ b/sys-utils/ipcrm.8
@@ -4,10 +4,10 @@
 .SH NAME
 ipcs \- provide information on ipc facilities
 .SH SYNOPSIS
-.BI "ipcrm [ shm | msg | sem ] " id
+.BI "ipcrm [ shm | msg | sem ] " id ...
 .SH DESCRIPTION
 .B ipcrm
-will remove the resource speccified by
+will remove the resource(s) specified by
 .IR id .
 .SH SEE ALSO
 .BR ipcs (8)
